2008-07-18  Oliver Hunt  <oliver@apple.com>

        Reviewed by Cameron Zwarich.

        Bug 18774: SQUIRRELFISH: print meaningful error messages <https://bugs.webkit.org/show_bug.cgi?id=18774>
        <rdar://problem/5769353> SQUIRRELFISH: JavaScript error messages are missing informative text

        Add support for decent error messages in JavaScript.  This patch achieves this by providing
        ensuring the common errors and exceptions have messages that provide the text of expression
        that trigger the exception.  In addition it attaches a number of properties to the exception
        object detailing where in the source the expression came from.

        * JavaScriptCore.exp:
        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::lineNumberForVPC):
        (KJS::CodeBlock::expressionRangeForVPC): 
            Function to recover the expression range for an instruction
            that triggered an exception.
        * VM/CodeBlock.h:
        (KJS::ExpressionRangeInfo::):
        (KJS::CodeBlock::CodeBlock):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitCall):
        (KJS::CodeGenerator::emitCallEval):
            Emit call needed to be modified so to place the expression range info internally,
            as the CodeGenerator emits the arguments nodes itself, rather than the various call
            nodes.
        * VM/CodeGenerator.h:
        (KJS::CodeGenerator::emitExpressionInfo):
            Record the expression range info.
        * VM/ExceptionHelpers.cpp:
        (KJS::createErrorMessage):
        (KJS::createInvalidParamError):
        (KJS::createUndefinedVariableError):
        (KJS::createNotAConstructorError):
        (KJS::createNotAFunctionError):
        (KJS::createNotAnObjectErrorStub):
        (KJS::createNotAnObjectError):
            Rewrite all the code for the error messages so that they make use of the newly available
            information.
        * VM/ExceptionHelpers.h:
        * VM/Machine.cpp: