@@ -319,9 +319,9 @@ namespace KJS {
     class ThrowableExpressionData {
     public:
         ThrowableExpressionData()
-            : m_divot(-1)
-            , m_startOffset(-1)
-            , m_endOffset(-1)
+            : m_divot(static_cast<uint32_t>(-1))
+            , m_startOffset(static_cast<uint16_t>(-1))
+            , m_endOffset(static_cast<uint16_t>(-1))
         {
         }
         
